@@ -5,7 +5,7 @@ SUBDIRS = wrlib WINGs src util po WindowMaker wmlib test WPrefs.app doc
 EXTRA_DIST = TODO BUGS BUGFORM FAQ FAQ.I18N MIRRORS COPYING.OPL \
 	Install acconfig.h\
 	mkpatch README.KDE README.GNOME WindowMaker.lsm.in\
-	docklib-0.2.tar.gz
+	docklib-0.2.tar.gz libwmfun-0.0.1.tar.gz
 
 WindowMaker.lsm: WindowMaker.lsm.in
 	size=`wc -c $(distdir).tar.gz|cut -d\  -f1`;\
